--- a/templates/MasterList.html
+++ b/templates/MasterList.html
@@ -7,11 +7,12 @@
 {% endblock title %}
 
 {% block content %}
+
     {# Site title bar #}
-    <a class="text-decoration-none" href="{{ url_for('home') }}">  {# link to home page #}
+    <a class="text-decoration-none" href="{{ url_for('home') }}">  {# Link to home page #}
         <div class="row mt-3 text-center">
-            <div class="col-12 ml-auto p-3 mb-2 bg-secondary text-white">
-                <h1>Server System Monitoring Tool</h1> {# Site title #}
+            <div class="col-12 ml-auto p-3 mb-2 text-white" style="background-color: #005288">
+                <h1>Server System Monitoring Tool</h1>  {# Site Title #}
             </div>
         </div>
     </a>
