--- a/templates/Usage-Disk.html
+++ b/templates/Usage-Disk.html
@@ -1,60 +1,58 @@
 
-{% from '_formhelpers.html' import render_field %} {# import neede for chard range forms #}
-
 {% extends 'layout.html' %} {# inherits format from layout.html #}
 
 {% block title %}{# Overides layout.html default title #}
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> {# Script needed for chart.js #}
-
     <title>Disk-Usage - {{ server.ServerName }}</title> {# Title - shown in tab on browser #}
     <link rel="icon" href="/static/favicons/hdd.ico">
 {% endblock title %}
 
 {% block content %} {# Overides layout.html body section #}
 
-    <a class="text-decoration-none" href="{{ url_for('home') }}">
-        <div class="row mt-3 text-center"> {# Row for page header #}
+    {# Site title bar #}
+    <a class="text-decoration-none" href="{{ url_for('home') }}">  {# Link to home page #}
+        <div class="row mt-3 text-center">
             <div class="col-12 ml-auto p-3 mb-2 text-white" style="background-color: #005288">
-                <h1>Server System Monitoring Tool</h1>
+                <h1>Server System Monitoring Tool</h1> {# Site Title #}
             </div>
         </div>
     </a>
 
-    <div class="mt-3 text-center"> {# Home button & Rack & Server Names #}
+    <div class="mt-3 text-center">
         <div class="row card-body border border-dark font-weight-bold">
             <div class="col-2 text-left">
                 <a class="btn btn-secondary btn-lg" href="{{ url_for('dataOverview', slug=server.ServerId) }}"
                    role="button"><i
-                        class="fas fa-arrow-alt-circle-left"></i> Back</a>
+                        class="fas fa-arrow-alt-circle-left"></i> Back</a> {# Back button #}
             </div>
+
             <div class="col-8 text-center">
-                <h2>Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h2>
+                <h2>Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h2> {# Rack and server #}
             </div>
+
             <div class="col-2 text-right">
                 <a class="btn btn-secondary btn-lg" href="{{ url_for('home') }}" role="button"><i
-                        class="fa fa-home"></i> Home</a>
+                        class="fa fa-home"></i> Home</a> {# Home button #}
             </div>
         </div>
     </div>
 
-    {#    </div>#}
-    <div class="row text-center m-5"> {# Displays this servers Disk usage #}
+    <div class="row text-center m-5"> {#  this servers Disk usage #}
         <div class="col-12">
             <h2 class="text-{{ color[server.ServerId]['DiskColor'] }}"> Disk Usage: <b>{{ ametric.Disk }}%</b></h2>
         </div>
     </div>
     <hr/>
 
-    <div class="row mt-3 text-center">
+    <div class="row mt-3 text-center">  {# Displays flash messages if there are any #}
         <div class="col-12">
             {% with messages = get_flashed_messages(with_categories=true) %}
-                <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
                 {% if messages %}
                     {% for category, message in messages %}
                         <div class="alert alert-{{ category }} alert-dismissible" role="alert">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                                     aria-hidden="true">&times;</span></button>
-                            <!-- <strong>Title</strong> --> {{ message }}
+                            {{ message }}
                         </div>
                     {% endfor %}
                 {% endif %}
@@ -62,18 +60,19 @@
         </div>
     </div>
 
-    <div class="row text-center mt-5 ml-auto"> {# forms for chard date range | NOT CURRENTLY WORKING #}
+    <div class="row text-center mt-5 ml-auto"> {# form for start and end date #}
         <div class="col">
             <form method="post">
                 <div class="form-row">
-                    {{ form.csrf_token }}
+                    {{ form.csrf_token }} {# cross site request forgery token #}
                     <div class="col-5">
-                        <h6>Start Date: {{ form.startDate }}</h6>
+                        <h6>Start Date: {{ form.startDate }}</h6> {# Start input #}
                     </div>
                     <div class="col-5">
-                        <h6>End Date: {{ form.endDate }}</h6>
+                        <h6>End Date: {{ form.endDate }}</h6> {# End input #}
                     </div>
                     <div class="col-2">
+                        {# Submit button #}
                         <button type="submit" class="btn btn-success btn-sm">Update</button>
                     </div>
                 </div>
@@ -81,41 +80,34 @@
         </div>
     </div>
 
-
-    {#        <div class="row ml-2"> {# Lists the dates in date range in order | FOR TESTING/DEBUGGING #}
-    {#            <ol>#}
-    {#                {% for d in date %}#}
-    {#                    <li> {{ d }} </li>#}
-    {#                {% endfor %}#}
-    {#            </ol>#}
-    {#        </div>#}
-
     <div class="row text-center m-5">{# Chart for usage #}
-
         <div class="col">
             <canvas id="myChart"></canvas>
         </div>
+
+        {# script for usage chart #}
         <script>
             var ctx = document.getElementById('myChart').getContext('2d');
             var chart = new Chart(ctx, {
-                {# The type of chart we want to create #}
                 type: 'line',
 
-                {% if hi == 'xxx' %}
+                {% if hi == 'xxx' %}  {# if the dae range is less than 24 hrs #}
                     {# The data for our dataset #}
                     data: {
                         labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
                         datasets: [{
                             label: 'usage',
-                            backgroundColor: 'rgba(164,110,255,0.82)', borderColor: 'rgb(0,0,0)',
+                            backgroundColor: 'rgba(164,110,255,0.82)',
+                            borderColor: 'rgb(0,0,0)',
                             data: [{% for u in usage %} "{{ u }}", {% endfor %}], {# Usages #}
-                            lineTension: 0
+                            lineTension: 0  {# Makes line less curvy #}
                         }]
                     },
                     options: {
                         legend: {display: false}
                     }
-                {% else %}
+
+                {% else %}  {# if date range is greater than 24 hrs #}
                     data: {
                         labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
                         datasets: [{
@@ -124,7 +116,7 @@
                             backgroundColor: 'rgba(255,33,0,0.71)',
                             borderColor: 'rgb(255,33,0)',
                             data: [{% for h in hi %} "{{ h }}", {% endfor %}], {# Usages #}
-                            lineTension: 0
+                            lineTension: 0  {# Makes line less curvy #}
                         }, {
                             label: 'Average',
                             fill: false,
@@ -144,20 +136,16 @@
                     },
                     options: {
                         legend: {
-                            display: true,
+                            display: true, {# add legend #}
                             position: 'top',
                         }
                     }
                 {% endif %}
-
-
-                {# Configuration options go here #}
-
             });
         </script>
     </div>
 
-    {% if lo == 'xxx' %}
+    {% if lo == 'xxx' %}  {# if date range is less tha  24 hrs #}
         <div class="row"> {# Disk Usage table #}
             <div class="col mt-5 mb-5">
                 <table id="usage" class="display">
@@ -165,20 +153,22 @@
                     <tr>
                         <th>Date/Time</th>
                         <th>Total</th>
-                        {% for p in partitions %}
+                        {% for p in partitions %}  {# list all patritons for this server #}
                             <th>{{ p }}</th>
                         {% endfor %}
                     </tr>
                     </thead>
                     <tbody>
 
+                    {# list all dates and usages for this server #}
                     {# key == Dates, val == Dict of total and partitions, v == the usages of those partitons #}
                     {% for key, val in partuse.items() %}
                         <tr>
                             <td>{{ key }}</td>
+                            {# dates #}
 
                             {% for v in val.values() %}
-                                <td>{{ v }}</td>
+                                <td>{{ v }}</td>  {# usages #}
                             {% endfor %}
                         </tr>
                     {% endfor %}
@@ -187,8 +177,9 @@
                 </table>
             </div>
         </div>
-    {% else %}
-        <div class="row"> {# cpu Usage table #}
+
+    {% else %}  {# if date range greater than 24 hrs #}
+        <div class="row"> {# Disk Usage table #}
             <div class="col mt-5 mb-5">
                 <table id="usage" class="display">
                     <thead>
@@ -197,16 +188,19 @@
                         <th>High</th>
                         <th>Average</th>
                         <th>Low</th>
-
                     </tr>
                     </thead>
                     <tbody>
                     {% for d, h, a, l in zip(date, hi, avg, lo) %}
                         <tr>
                             <td>{{ d }}</td>
+                            {# Date #}
                             <td class="table-danger">{{ h }}%</td>
+                            {# High #}
                             <td class="table-warning">{{ a }}%</td>
+                            {# Average #}
                             <td class="table-success">{{ l }}%</td>
+                            {# Low #}
                         </tr>
                     {% endfor %}
                     </tbody>
