--- a/templates/Usage-Ping.html
+++ b/templates/Usage-Ping.html
@@ -1,44 +1,45 @@
-
-{% from '_formhelpers.html' import render_field %} {# import neede for chard range forms #}
-
 {% extends 'layout.html' %} {# inherits format from layout.html #}
 
 {% block title %}{# Overides layout.html default title #}
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> {# Script needed for chart.js #}
-
     <title>Ping-Usage - {{ server.ServerName }}</title> {# Title - shown in tab on browser #}
     <link rel="icon" href="/static/favicons/signal.ico">
 {% endblock title %}
 
 {% block content %} {# Overides layout.html body section #}
 
-    <a class="text-decoration-none" href="{{ url_for('home') }}">
-        <div class="row mt-3 text-center"> {# Row for page header #}
+    {# Site title bar #}
+    <a class="text-decoration-none" href="{{ url_for('home') }}">  {# Link to home page #}
+        <div class="row mt-3 text-center">
             <div class="col-12 ml-auto p-3 mb-2 text-white" style="background-color: #005288">
-                <h1>Server System Monitoring Tool</h1>
+                <h1>Server System Monitoring Tool</h1> {# Site Title #}
             </div>
         </div>
     </a>
 
-    <div class="mt-3 text-center"> {# Home button & Rack & Server Names #}
+    <div class="mt-3 text-center">
         <div class="row card-body border border-dark font-weight-bold">
             <div class="col-2 text-left">
                 <a class="btn btn-secondary btn-lg" href="{{ url_for('dataOverview', slug=server.ServerId) }}"
                    role="button"><i
-                        class="fas fa-arrow-alt-circle-left"></i> Back</a>
+                        class="fas fa-arrow-alt-circle-left"></i> Back {# Back button #}
+                </a>
             </div>
+
             <div class="col-8 text-center">
-                <h2>Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h2>
+                <h2>Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h2> {# Rack and server #}
             </div>
+
             <div class="col-2 text-right">
                 <a class="btn btn-secondary btn-lg" href="{{ url_for('home') }}" role="button"><i
-                        class="fa fa-home"></i> Home</a>
+                        class="fa fa-home"></i> Home {# Home button #}
+                </a>
             </div>
         </div>
     </div>
 
     {#    </div>#}
-    <div class="row text-center m-5"> {# Displays this servers RAM usage #}
+    <div class="row text-center m-5"> {# this servers RAM usage #}
         <div class="col-12">
             <h2 class="text-{{ color[server.ServerId]['PingColor'] }}"> Ping Status: <b>{{ ametric.PingLatency }} ms
                 - {{ color[server.ServerId]['PingStatus'] }}</b></h2>
@@ -46,16 +47,15 @@
     </div>
     <hr/>
 
-    <div class="row mt-3 text-center">
+    <div class="row mt-3 text-center">  {# Displays flash messages if there are any #}
         <div class="col-12">
             {% with messages = get_flashed_messages(with_categories=true) %}
-                <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
                 {% if messages %}
                     {% for category, message in messages %}
                         <div class="alert alert-{{ category }} alert-dismissible" role="alert">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                                     aria-hidden="true">&times;</span></button>
-                            <!-- <strong>Title</strong> --> {{ message }}
+                            {{ message }}
                         </div>
                     {% endfor %}
                 {% endif %}
@@ -63,18 +63,19 @@
         </div>
     </div>
 
-    <div class="row text-center mt-5 ml-auto"> {# forms for chard date range | NOT CURRENTLY WORKING #}
+    <div class="row text-center mt-5 ml-auto">  {# form for start and end date #}
         <div class="col">
             <form method="post">
                 <div class="form-row">
-                    {{ form.csrf_token }}
+                    {{ form.csrf_token }} {# cross site request forgery token #}
                     <div class="col-5">
-                        <h6>Start Date: {{ form.startDate }}</h6>
+                        <h6>Start Date: {{ form.startDate }}</h6> {# Start input #}
                     </div>
                     <div class="col-5">
-                        <h6>End Date: {{ form.endDate }}</h6>
+                        <h6>End Date: {{ form.endDate }}</h6> {# End date input #}
                     </div>
                     <div class="col-2">
+                        {# Submit button #}
                         <button type="submit" class="btn btn-success btn-sm">Update</button>
                     </div>
                 </div>
@@ -82,27 +83,20 @@
         </div>
     </div>
 
-
-    {#        <div class="row ml-2"> {# Lists the dates in date range in order | FOR TESTING/DEBUGGING #}
-    {#            <ol>#}
-    {#                {% for d in date %}#}
-    {#                    <li> {{ d }} </li>#}
-    {#                {% endfor %}#}
-    {#            </ol>#}
-    {#        </div>#}
-
     <div class="row text-center m-5">{# Chart for usage #}
 
         <div class="col">
             <canvas id="myChart"></canvas>
         </div>
+
+        {# script for usage chart #}
         <script>
             var ctx = document.getElementById('myChart').getContext('2d');
             var chart = new Chart(ctx, {
                 {# The type of chart we want to create #}
                 type: 'line',
 
-                {% if hi == 'xxx' %}
+                {% if hi == 'xxx' %}  {# if the dae range is less than 24 hrs #}
                     {# The data for our dataset #}
                     data: {
                         labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
@@ -112,13 +106,13 @@
                             backgroundColor: 'rgb(122,211,132)',
                             borderColor: 'rgb(0,0,0)',
                             data: [{% for u in usage %} "{{ u }}", {% endfor %}], {# Usages #}
-                            lineTension: 0
+                            lineTension: 0  {# Makes line less curvy #}
                         }]
                     },
                     options: {
                         legend: {display: false}
                     }
-                {% else %}
+                {% else %}  {# if date range is greater than 24 hrs #}
                     data: {
                         labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
                         datasets: [{
@@ -126,28 +120,28 @@
                             fill: false,
                             backgroundColor: 'rgba(255,33,0,0.71)',
                             borderColor: 'rgb(255,33,0)',
-                            data: [{% for h in hi %} "{{ h }}", {% endfor %}], {# Usages #}
+                            data: [{% for h in hi %} "{{ h }}", {% endfor %}], {# High #}
                             lineTension: 0
                         }, {
                             label: 'Average',
                             fill: false,
                             backgroundColor: 'rgba(255,223,0,0.71)',
                             borderColor: 'rgb(255,223,0)',
-                            data: [{% for a in avg %} "{{ a }}", {% endfor %}],
+                            data: [{% for a in avg %} "{{ a }}", {% endfor %}], {# Average #}
                             lineTension: 0
                         }, {
                             label: 'Low',
                             fill: false,
                             backgroundColor: 'rgba(64,255,0,0.71)',
                             borderColor: 'rgb(64,255,0)',
-                            data: [{% for l in lo %} "{{ l }}", {% endfor %}],
+                            data: [{% for l in lo %} "{{ l }}", {% endfor %}], {# low #}
                             lineTension: 0
                         }
                         ]
                     },
                     options: {
                         legend: {
-                            display: true,
+                            display: true, {# add legend #}
                             position: 'top',
                         }
                     }
@@ -156,7 +150,7 @@
         </script>
     </div>
 
-    {% if lo == 'xxx' %}
+    {% if lo == 'xxx' %}  {# if date range is less tha  24 hrs #}
         <div class="row"> {# ping Usage table #}
             <div class="col mt-5 mb-5">
                 <table id="usage" class="display">
@@ -170,15 +164,18 @@
                     {% for d, u in zip(date, usage) %}
                         <tr>
                             <td>{{ d }}</td>
+                            {# dates #}
                             <td>{{ u }}ms</td>
+                            {# usages #}
                         </tr>
                     {% endfor %}
                     </tbody>
                 </table>
             </div>
         </div>
-    {% else %}
-        <div class="row"> {# cpu Usage table #}
+
+    {% else %}  {# if date range greater than 24 hrs #}
+        <div class="row"> {# Ping response table #}
             <div class="col mt-5 mb-5">
                 <table id="usage" class="display">
                     <thead>
@@ -187,16 +184,19 @@
                         <th>High</th>
                         <th>Average</th>
                         <th>Low</th>
-
                     </tr>
                     </thead>
                     <tbody>
                     {% for d, h, a, l in zip(date, hi, avg, lo) %}
                         <tr>
                             <td>{{ d }}</td>
-                            <td class="table-danger">{{ h }}</td>
-                            <td class="table-warning">{{ a }}</td>
-                            <td class="table-success">{{ l }}</td>
+                            {# Dates #}
+                            <td class="table-danger">{{ h }}%</td>
+                            {# High #}
+                            <td class="table-warning">{{ a }}%</td>
+                            {# Average #}
+                            <td class="table-success">{{ l }}%</td>
+                            {# Low #}
                         </tr>
                     {% endfor %}
                     </tbody>
@@ -204,6 +204,5 @@
             </div>
         </div>
     {% endif %}
-
 
 {% endblock content %}
