--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,25 +3,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     {{ fontawesome_html() }}
+
     {% block title %} {# Title given by other pages #}
+
     {% endblock %}
 
+    {# Datatables CDN #}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
 
     {# Bootstrap CDN #}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    {# Custom CSS #}
     <link rel="stylesheet" type="text/css" href="/static/styles/horizantalScrolling.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/tooltips.css">
-
 </head>
+
 <body>
 <div class="container">
-    {% block content %}{% endblock %} {# Overwritten by other pages #}
+    {% block content %} {# Overwritten by other pages #}
+
+    {% endblock %}
 </div>
 
 {# Scripts for bootstrap #}
@@ -31,21 +36,22 @@
 <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
 
-{#<script src="https://code.jquery.com/jquery-3.4.1.min.js"#}
-{#        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="#}
-{#        crossorigin="anonymous"></script>#}
+
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+
+{# script for tooltips #}
 <script>
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
     })
 </script>
 
+{# scripts for datatables #}
 <script>
     $(document).ready(function () {
         $('#service').DataTable({
@@ -74,5 +80,6 @@
         });
     });
 </script>
+
 </body>
 </html>
