final changes, 5min refresh, small typos

--- a/templates/Usage-Disk.html
+++ b/templates/Usage-Disk.html
@@ -168,7 +168,7 @@
                             {# dates #}
 
                             {% for v in val.values() %}
-                                <td>{{ v }}</td>  {# usages #}
+                                <td>{{ v }}%</td>  {# usages #}
                             {% endfor %}
                         </tr>
                     {% endfor %}
