--- a/templates/Usage-Ping.html
+++ b/templates/Usage-Ping.html
@@ -191,11 +191,11 @@
                         <tr>
                             <td>{{ d }}</td>
                             {# Dates #}
-                            <td class="table-danger">{{ h }}%</td>
+                            <td class="table-danger">{{ h }} ms</td>
                             {# High #}
-                            <td class="table-warning">{{ a }}%</td>
+                            <td class="table-warning">{{ a }} ms</td>
                             {# Average #}
-                            <td class="table-success">{{ l }}%</td>
+                            <td class="table-success">{{ l }} ms</td>
                             {# Low #}
                         </tr>
                     {% endfor %}
